# Django

./: .editorconfig  .flake8  Makefile  README.md  README.rst  pyproject.toml
core/core/utils/: collections.py  misc.py
core/project/settings/: __init__.py  base.py  custom.py  docker.py  envvars.py
core/project/settings/templates/: settings.dev.py
